# CNRein

./: README.md  RLCNA.py  pipeline.py  process.py  pyproject.toml  run.py  scaler.py  script.py
DeepSomaticCopy/: RLCNA.py  pipeline.py  process.py  runBAM.py  scaler.py  script.py  shared.py
additionalReferenceFiles/: hg19_k100_len_100k.npz  hg19_len_100k.npz  hg38_k100_len_100k.npz  hg38_len_100k.npz
examples/10x_TN3/binScale/: BAF_noise.npz  HAP_mod.npz  bins.npz  chr_avg.npz  dividerError.npz  dividers.npz  filtered_HAP_avg.npz  filtered_RDR_avg.npz  filtered_RDR_noise.npz  initialCNA.npz  initialUniqueCNA.npz  regions.npz
examples/10x_TN3/info/: bamAll.txt
examples/10x_TN3/model/: model_new.pt  pred_new.npz
examples/ACT_TN3/binScale/: BAF_noise.npz  bins.npz  chr_avg.npz  dividerAll.npz  dividerError.npz  dividers.npz  filtered_HAP_avg.npz  filtered_RDR_avg.npz  filtered_RDR_noise.npz  initialCNA.npz  initialIndex.npz  initialUniqueCNA.npz  regions.npz
examples/ACT_TN3/info/: bamAll.txt  bamChunks.txt  rebamChunk_0.txt  rebamChunk_1.txt  rebamChunk_2.txt
examples/ACT_TN3/model/: pred_new.npz
examples/Ovarian/binScale/: BAF_noise.npz  bins.npz  chr_avg.npz  dividerAll.npz  dividerError.npz  dividers.npz  filtered_HAP_avg.npz  filtered_RDR_avg.npz  filtered_RDR_noise.npz  initialCNA.npz  initialIndex.npz  initialUniqueCNA.npz  regions.npz  regions_new.npz
examples/Ovarian/info/: bamAll.txt
examples/TN1/: chr_100k.npz
extra/: comparison.py  plotting.py  sim.py
jupyterPlotting/: PlottingExample.ipynb  chr_avg.npz  treeWithLength.npz
(+65 files in other folders)
